eliminate some warnings