@@ -33,11 +33,11 @@ import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
 
-import org.apache.commons.lang3.CharEncoding;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.sling.api.resource.Resource;
 import org.apache.sling.api.resource.ResourceResolver;
@@ -100,7 +100,7 @@ class SuffixBuilderTest {
     String decodedSuffix = null;
     if (urlEncodedSuffix != null) {
       try {
-        decodedSuffix = URLDecoder.decode(urlEncodedSuffix, CharEncoding.UTF_8);
+        decodedSuffix = URLDecoder.decode(urlEncodedSuffix, StandardCharsets.UTF_8.name());
       }
       catch (UnsupportedEncodingException ex) {
         throw new RuntimeException("Unsupported encoding.", ex);
